# UNsim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  pip-install-release.yml  verification.yml
docs/: conf.py  getting_started.md  index.md  ref_analyzer.md  ref_core.md  ref_jax.md  reference.md  requirements.txt  tutorial.nblink
docs/_static/: ga.js
examples/: README.md  demo01_basic_tutorial.ipynb  example01_basic.py  example02_gridlock.py  example03_differentiable.py  example03b_differentiable_with_finite.py  example03c_differentiable_with_finite_routechoice.py  example06_chicago_raw.py  example06b_chicago_calibrated.py  example12a_chicago_congested.py  example12b_toll_optimization.py  example12c_toll_analysis.py  example12d_toll_spsa.py  example12e_spsa_analysis.py  example13_chicago_checkpointing.py
examples/results/: toll_optimized.npz
tests/: pip_install_smoke.py  test_checkpoint.py  test_deltat.py  test_diff.py  test_duo.py  test_duo_comparison.py  test_duo_logit.py  test_kuwahara_fig5.py  test_manual_diverge.py  test_travel_time_soft.py  test_verification_inm.py  test_verification_node.py  test_verification_straight_road.py  test_verification_toll.py  test_visualization.py
unsim/: __init__.py  analyzer.py  unsim.py  unsim_diff.py  utils.py
