[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "unsim"
description = "UNsim: traffic flow simulator"
readme = "README.md"
authors = [{name = "Toru Seo", email = "seo.t.aa@m.titech.ac.jp"}]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/toruseo/UNsim"


[tool.setuptools]
packages = {find = {include = ["unsim", "unsim.*"]}}

[tool.setuptools.dynamic]
version = {attr = "unsim.__version__"}